package lab11.Ex1_Observer;

public enum enum_produtos {
    stock, leilao, vendido
     
}
